# DarkGPT

./: .Rhistory  .dockerignore  .dvcignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agents.py  data_gen.py  dvc.yaml  generate_conversations.py  main.py  make_prompts.py  models.py  params.yaml  plot_issues.py  pyproject.toml  requirements.txt  run_eval.py  statistical-analysis.Rmd  summarize.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.dvc/: config
darkgpt/: agents.py  models.py
data/: .gitignore  raw.csv.dvc  raw.dvc
dataset/: .gitattributes  org_500.dvc  sg_90k_part1.json  sg_90k_part2.json  sim_500_gpt-3.5-turbo-1106.dvc  sim_500_gpt-4-0125-preview.dvc
docs/: human-annotation.md  limesurvey_group_example.lsg
evals/: 06mXEVd.json  0FSHjIq.json  0KKcU40.json  0MSXFLA.json  0Mi7fg7.json  0RDKk9A.json  0Zdwyfh.json  0kMM1sV.json  13VyV6c.json  1HuVef4.json  1L4fA20.json  1M3ZTSI.json  1u5bn2j.json  21eHV71.json  2EEC04Q.json  2JGvW9D.json  2ahi35V.json  2c5X3o0.json  2i5Ouvg.json  2wtLdZm.json  2xRaj2W.json  2zDyyMW.json  3OBVJ1T.json  3cU9IMf.json  3e3Dfw7.json  3nREEKO.json  3p7VL5M.json  3sa4Cml.json  3utdGYw.json  3yHmJQF.json  43LNWem.json  46RowWf.json  4OMZp3j.json  4Wwxlin.json  4XZ3Xz0.json  4caKvEr.json  4gIi0P8.json  4gp654Z.json  50SbvAt.json  52fYA4R.json  (+466 more)
public/: 46RowWf-privacy_zuckering.html  9N0WXk0-privacy_zuckering.html  AW3sDxx-privacy_zuckering.html  E6M9Q6e-id.html  FAUVyX5-data_collection.html  JvTfeFy-privacy_zuckering.html  LINiOhS-data_collection.html  Lus9efn-privacy_zuckering.html  OT1MWGx-privacy_zuckering.html  Rz8RfrO-data_collection.html  VFvZvX2-data_collection.html  index.html  rcE2Cv6-cost_optimization.html  styles.css  up3nBSn-privacy_zuckering.html  y3w0MAs-user_retention, cost_optimization.html  yjn5wT9-privacy_zuckering.html
scripts/: generate_conversations.py  (+7 more)
(+4122 files in other folders)
